Fix alignment of everything in the top bar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,4 +50,5 @@ body {
 
 .top-bar ul {
   background: none !important;
+  vertical-align: middle !important;
 }
